force-app/main/default/objects/Account/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <label>Account Level</label>
    <length>255</length>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <label>Global (Level 1)</label>
            </value>
            <value>
                <fullName>Regional</fullName>
                <label>Regional (Level 2)</label>
            </value>
            <value>
                <fullName>Division</fullName>
                <label>Division (Level 3)</label>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
                <label>Subsidiary (Level 4)</label>
            </value>
            <value>
                <fullName>Branch</fullName>
                <label>Branch (Level 5)</label>
            </value>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual (No Parent)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <visibilityPublic</visibilityPublic>
</CustomField>