force-app/main/default/objects/Account/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <label>Customer Since</label>
    <type>Date</type>
    <visibilityPublic</visibilityPublic>
</CustomField>