force-app/main/default/objects/Account/fields/Last_Won_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Won_Opportunity_Date__c</fullName>
    <label>Last Won Opportunity Date</label>
    <type>Date</type>
    <visibilityPublic</visibilityPublic>
</CustomField>