force-app/main/default/objects/Account/fields/Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Value__c</fullName>
    <label>Pipeline Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>