force-app/main/default/objects/Account/fields/Total_Revenue_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Won__c</fullName>
    <label>Total Revenue Won</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>