force-app/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Below</relationshipLabel>
    <type>Lookup</type>
    <visibilityPublic</visibilityPublic>
</CustomField>